# podme_api

./: .coveragerc  .editorconfig  .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS  ChangeLog  LICENSE  Makefile  Pipfile  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-package.yml  release-drafter.yaml  release.yaml  test.yaml  test.yml
docs/: Makefile  ruff.toml
docs/source/: apidoc.rst  cli.rst  conf.py  index.rst  installation.rst  introduction.rst  reference.rst
docs/source/api/: client.rst  exceptions.rst  types.rst
docs/source/reference/: api.rst  auth.rst  exceptions.rst  models.rst
examples/: download_all_episodes.py
podme_api/: __init__.py  cli.py  client.py  const.py  exceptions.py  helpers.py  models.py  types.py  utils.py
podme_api/auth/: __init__.py  client.py  common.py  mobile_client.py  models.py  utils.py
podme_api/cli/: cli.py  utils.py
src/podme_api/: __init__.py  client.py
tests/: __init__.py  conftest.py  helpers.py  ruff.toml  test_auth.py  test_client.py
tests/fixtures/: auth_flow.json  authorize_1_oauth-authorize.json  authorize_2_login.json  authorize_3_authn-api-settings-csrf.json  authorize_4_authn-api-identity-email-status.json  authorize_4_authn-api-identity-login.json  authorize_5_authn-api-identity-login.json  authorize_5_authn-identity-finish.json  authorize_6_authn-identity-finish.json  authorize_6_oauth-finalize.json  authorize_7_oauth-finalize.json  authorize_7_oauth-token.json  authorize_8_oauth-token.json  bffdata.json  cms_categories-page_NO_COMEDY.json  cms_categories.json  cms_home-screen.json  default_credentials.json  episode_3612514.json  episode_currentlyplaying.json  episode_slug_aftenpodden-page1.json  episode_slug_aftenpodden-page2.json  mock_credentials.json  podcast_category_222-page1.json  podcast_category_222-page2.json  podcast_popular-2-None-page1.json  podcast_popular-2-None-page2.json  podcast_popular-None-documentary-page1.json  podcast_popular-None-documentary-page2.json  podcast_search-page1.json  podcast_search-page2.json  podcast_slug_aftenpodden.json  podcast_userpodcasts.json  stream_m3u8.json  stream_mp3.json  subscription.json  v2_episodes_1360289.json  v2_episodes_1936396.json  v2_episodes_3612514.json  v2_episodes_4125238.json  (+13 more)
