[tool.poetry]
name = "podme-api"
version = "0.2.0"
description = "A client library for using the podme.com web API"
readme = "README.rst"
authors = ["Bendik R. Brenne <bendik@konstant.no>"]
repository = "https://github.com/bendikrb/podme_api"
documentation = "https://podme-api.readthedocs.io/en/latest/"
license = "MIT"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "podcast",
    "api-client",
    "unofficial",
]
packages = [
    { include = "podme_api" },
]

[tool.poetry.dependencies]
python = "^3.11"
youtube-dl = "^2021.12.17"
requests = "^2.31.0"
pydantic = "^2.4.2"
rich = "^13.6.0"
platformdirs = "^3.11.0"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.3.0"
sphinx-argparse = "^0.4.0"
pytest = "^7.4.2"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autobuild", "sphinx-rtd-theme", "sphinx-argparse"]

[tool.poetry.scripts]
podme = "podme_api.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
