[metadata]
name = podme_api
author = bendikrb
summary = A client library for using the podme.com web API.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
python_requires = >= 3.7
home_page = https://github.com/bendikrb/podme_api
project_urls =
    Bug Tracker = https://github.com/bendikrb/podme_api/issues
    Source Code = https://github.com/bendikrb/podme_api
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
keywords =
    podcast
    api-client
    unofficial

[files]
packages =
    podme_api

[entry_points]
console_scripts =
    podme = podme_api.cli:main
